Added basictodolist exercise

--- a/basictodolist.html
+++ b/basictodolist.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="basictodolist.js"></script>
-  <title>JS Todo List</title>
+  <title>Basic JS Todo List</title>
 </head>
 
 <body>
