Added score keeper exercise

--- a/FormsExercise.html
+++ b/FormsExercise.html
@@ -20,7 +20,7 @@
     <div>
       <label for="Male">Male</label>
       <input id="Male" name="GenderChoice" type="radio" value="Male" required>
-      <label for="Female"> emale</label>
+      <label for="Female"> Female</label>
       <input id="Female" name="GenderChoice" type="radio" value="Female">
       <label for="Other">Other</label>
       <input id="Other" name="GenderChoice" type="radio" value="Other">
